--- a/wikipedia.html
+++ b/wikipedia.html
@@ -22,6 +22,12 @@
       <li class="nav-item">
         <a class="nav-link active" href="#">View History</a>
       </li>
+      <li class="nav-item pull-right">
+        <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </li>
     </ul>
   </body>
 </html>
