--- a/wikipedia.html
+++ b/wikipedia.html
@@ -11,7 +11,7 @@
         <!--Vertical Navigation Bar-->
         <ul class="nav flex-column">
           <li class="nav-item">
-              <a class="nav-link active" href="#">WIKI IMG</a>
+              <img src="img/heavensgate.jpg" alt="logo"></img>
           </li>
           <li class="nav-item">
               <a class="nav-link active" href="#">Main Page</a>
@@ -103,6 +103,7 @@
             <div class="col-lg-6">
               <div class="panel panel-success bordergreen px-2">
               <h3 class="bg-success">From today's featured article</h3>
+              <img class="img2" src="img/lemonke.jpg" alt="monke">
                 Reed beds in Ham Wall
                 Reed beds in Ham Wall
                 Ham Wall is an English wetland and National Nature Reserve located 4 kilometres (2.5 mi) west of Glastonbury on the Somerset Levels. It is managed by the Royal Society for the Protection of Birds, which helps coordinate conservation issues across the Somerset Levels as part of the Avalon Marshes Partnership. The reserve was constructed originally to provide reed bed habitat for the bittern, which in 1997 was at a low population level in the UK. The site is divided into sections with independently controllable water levels, and machinery and cattle are used to maintain the quality of the reed beds. The reserve hosts important breeding populations of the rare little bittern and great white egret, and has other uncommon animals and plants. Potential future threats may include heavy summer rains and extensive flooding. Sea level rise may make drainage more difficult, and current water pumping facilities may become inadequate. (Full article...)
@@ -127,6 +128,7 @@
             <div class="col-lg-6">
               <div class="panel panel-primary borderblue">
               <h4 class="bg-primary px3">In the news</h4>
+              <img class="img4" src="img/raccoon.jpg" alt="ohno">
                 Ukraine International Airlines Flight 752 aircraft in 2019
                 UIA Flight 752 aircraft
                 Ukraine International Airlines Flight 752 (aircraft pictured) crashes shortly after takeoff from Tehran, Iran, killing all 176 people on board.
@@ -157,6 +159,7 @@
               <div class="border2">
               <h4 class="headline">Today's featured picture</h4>
                 Caleb Strong	
+                <img class="img3" src="img/ggallin.jpg" alt="guy">
                 Caleb Strong (January 9, 1745 – November 7, 1819) was an American lawyer and politician who twice served as Governor of Massachusetts, once from 1800 to 1807, and again from 1812 until 1816. He assisted in drafting the Constitution of Massachusetts in 1779, and served in the Massachusetts Senate and on the Massachusetts Governor's Council, before being elected to the inaugural United States Senate in 1789. The War of 1812 influenced Strong to come out of retirement and run again for governor. It was largely his policies during the war that aroused secessionist sentiment in Maine, when Massachusetts's pro-British merchants opposed the war and refused to defend Maine from British invaders.
                 
                 Engraving credit: James Bannister of the American Bank Note Company; restored by Andrew Shiva
